# emx-fortnite-sprite-tracker

./: .gitignore  .vercelignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: release-windows.yml  sync-live-catalog.yml
app/: globals.css  layout.tsx  page.tsx
data/: image-map.json  sprite-reference.txt  sprites.json
lib/: cloud.ts  supabase.ts
public/: manifest.webmanifest  sw.js
public/data/: catalog-live.json
public/updates/: latest.json
scripts/: apply-v4120-catalog.mjs  download-sprite-images.mjs  generate-catalog.mjs  sprite-details.mjs  sync-live-catalog.mjs  validate-data.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
supabase/: config.toml
supabase/functions/delete-account/: index.ts
supabase/migrations/: 001_legacy_remote.sql  002_legacy_remote.sql  003_legacy_remote.sql  004_legacy_remote.sql  005_legacy_remote.sql  006_legacy_remote.sql  007_legacy_remote.sql  20260710123000_leaderboard.sql  20260710124500_leaderboard_polish.sql  20260710173000_profile_display_names.sql  20260710_emx_tracker.sql  20260711033000_profile_cosmetics.sql  20260716173000_v119_profile_rewards.sql
