[package]
name = "emx_fortnite_sprite_tracker"
version = "1.1.4"
description = "EMX Fortnite Sprite Tracker"
authors = ["EMX Tweaks"]
edition = "2021"

[lib]
name = "emx_fortnite_sprite_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = [] }
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
